Fix Bug 293098 - KAddressbook/Akonadi stores CATEGORIES escaped the

wrong way

It was already escaped when we create category
Not necessary to re-escapte it.

BUG: 293098
FIXED-IN: 4.8.5
(cherry picked from commit 51a474722ee0d5b96e2e5593978bc5be3deef516)